fix: UI grid gap improvement to support IOS devices

--- a/src/components/CardHolder/styles.css
+++ b/src/components/CardHolder/styles.css
@@ -6,6 +6,7 @@
 .card-holder.list {
   display: flex;
   flex-direction: column;
+  grid-gap: 0rem;
 }
 @media (min-width: 1024px) and (max-width: 1250px) {
   .card-holder {
