--- a/src/components/DetailCard/styles.css
+++ b/src/components/DetailCard/styles.css
@@ -8,6 +8,7 @@
 .card-container.list {
   display: flex;
   align-items: center;
+  margin-bottom: 2rem;
 }
 .card-container .img-section {
   height: 401px;
